Corrigido o nome da função editando para editing

--- a/src/app/cars/car-input/car-input.component.html
+++ b/src/app/cars/car-input/car-input.component.html
@@ -3,7 +3,7 @@
 
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>{{ editando ? 'Edição de' : 'Novo' }} Carro</h1>
+        <h1>{{ editing ? 'Edição de' : 'Novo' }} Carro</h1>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
